--- a/notebooks/train-script-cococaption.ipynb
+++ b/notebooks/train-script-cococaption.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import torch\n",
     "import pandas as pd\n",
-    "import yaml\n",
+    "import yaml, sys\n",
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split\n",
     "from transformers import (\n",
@@ -23,6 +23,24 @@
     "from model import BLIP2ForPhi, setup_model, select_train_params\n",
     "from dataset import ImageCaptioningDataset, get_datasets\n",
     "from trainer import CustomTrainer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_DIR = Path(\"..\").resolve()\n",
+    "\n",
+    "# 주요 디렉토리 경로 정의\n",
+    "SRC_DIR = BASE_DIR / \"src\"\n",
+    "CONFIG_DIR = BASE_DIR / \"configs\"\n",
+    "OUTPUT_DIR = BASE_DIR / \"outputs\"\n",
+    "\n",
+    "# src 폴더 import 경로에 추가\n",
+    "if str(SRC_DIR) not in sys.path:\n",
+    "    sys.path.append(str(SRC_DIR))"
    ]
   },
   {
@@ -70,7 +88,7 @@
     }
    ],
    "source": [
-    "config_path = '../configs/config.yaml' \n",
+    "config_path = CONFIG_DIR / \"config.yaml\"\n",
     "\n",
     "with open(config_path, 'r') as f:\n",
     "        config = yaml.safe_load(f)\n",
