--- a/notebooks/train-script-cococaption.ipynb
+++ b/notebooks/train-script-cococaption.ipynb
@@ -19,18 +19,6 @@
     "from datasets import load_dataset\n",
     "from torch.utils.data import Dataset, DataLoader, Subset\n",
     "\n",
-    "# From src dir\n",
-    "from model import BLIP2ForPhi, setup_model, select_train_params\n",
-    "from dataset import ImageCaptioningDataset, get_datasets\n",
-    "from trainer import CustomTrainer\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "BASE_DIR = Path(\"..\").resolve()\n",
     "\n",
     "# 주요 디렉토리 경로 정의\n",
@@ -40,7 +28,12 @@
     "\n",
     "# src 폴더 import 경로에 추가\n",
     "if str(SRC_DIR) not in sys.path:\n",
-    "    sys.path.append(str(SRC_DIR))"
+    "    sys.path.append(str(SRC_DIR))\n",
+    "\n",
+    "# From src dir\n",
+    "from model import BLIP2ForPhi, setup_model, select_train_params\n",
+    "from dataset import ImageCaptioningDataset, get_datasets\n",
+    "from trainer import CustomTrainer\n"
    ]
   },
   {
