--- a/notebooks/train-script-cococaption.ipynb
+++ b/notebooks/train-script-cococaption.ipynb
@@ -17,7 +17,7 @@
     ")\n",
     "from peft import LoraConfig, get_peft_model\n",
     "from datasets import load_dataset\n",
-    "from torch.utils.data import Dataset, DataLoader, Subset\n",
+    "from torch.utils.data import Dataset, DataLoader, Subset, ConcatDataset\n",
     "\n",
     "BASE_DIR = Path(\"..\").resolve()\n",
     "\n",
@@ -57,29 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-07-06T22:32:05.402493Z",
-     "iopub.status.busy": "2025-07-06T22:32:05.401964Z",
-     "iopub.status.idle": "2025-07-06T22:32:28.937898Z",
-     "shell.execute_reply": "2025-07-06T22:32:28.937326Z",
-     "shell.execute_reply.started": "2025-07-06T22:32:05.402471Z"
-    },
-    "trusted": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-06 22:32:16.629491: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1751841136.824421      88 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1751841136.881616      88 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "config_path = CONFIG_DIR / \"config.yaml\"\n",
     "\n",
@@ -90,10 +70,37 @@
     "num_trainable_params = select_train_params(model, language_model=False)\n",
     "\n",
     "print(f\"training {num_trainable_params} params...\")\n",
-    "print(f\"Preparing dataset...\")\n",
+    "print(f\"Preparing dataset...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset1, valid_dataset1, train_debug1, valid_debug1 = get_datasets(config['dataset']['cocoCaption'], config, image_processor, tokenizer)\n",
+    "train_dataset2, valid_dataset2, train_debug2, valid_debug2 = get_datasets(config['dataset']['flickr'], config, image_processor, tokenizer)\n",
+    "train_dataset3, valid_dataset3, train_debug3, valid_debug3 = get_datasets(config['dataset']['llava'], config, image_processor, tokenizer)\n",
     "\n",
-    "train_dataset, valid_dataset, train_debug, valid_debug = get_datasets(config['dataset']['image_captioning'], config, image_processor, tokenizer)\n",
+    "num_samples_to_train, num_samples_to_valid = 8000, 3000\n",
+    "subset_of_train_dataset3 = train_dataset3.shuffle(seed=42).select(range(num_samples_to_train))\n",
+    "subset_of_valid_dataset3 = valid_dataset3.shuffle(seed=42).select(range(num_samples_to_valid))\n",
     "\n",
+    "final_train_dataset = ConcatDataset([train_dataset1, train_dataset2, subset_of_train_dataset3])\n",
+    "final_valid_dataset = ConcatDataset([valid_dataset1, valid_dataset2, subset_of_valid_dataset3])\n",
+    "\n",
+    "print(f\"Train Dataset length: {len(final_train_dataset)}, Valid Dataset length: {len(final_valid_dataset)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
     "trainable_params = filter(lambda p: p.requires_grad, model.parameters())\n",
     "optimizer = torch.optim.AdamW(\n",
     "    trainable_params, \n",
@@ -105,9 +112,9 @@
     "        model=model,\n",
     "        optimizer=optimizer,\n",
     "        tokenizer=tokenizer,\n",
-    "        train_dataset=train_debug,\n",
-    "        val_dataset=valid_debug,\n",
-    "        dataset_name=config['dataset']['image_captioning'],\n",
+    "        train_dataset=final_train_dataset,\n",
+    "        val_dataset=final_valid_dataset,\n",
+    "        dataset_name='ImageCaptioning',\n",
     "        batch_size=config['training']['batch_size'],\n",
     "        save_dir=config['path']['save_dir'],\n",
     "        repo_id=config['hf']['repo_id']\n",
@@ -120,15 +127,6 @@
     ")\n",
     "print(\"Training finished!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "trusted": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
