--- a/notebooks/train-script-cococaption.ipynb
+++ b/notebooks/train-script-cococaption.ipynb
@@ -83,12 +83,16 @@
     "train_dataset2, valid_dataset2, train_debug2, valid_debug2 = get_datasets(config['dataset']['flickr'], config, image_processor, tokenizer)\n",
     "train_dataset3, valid_dataset3, train_debug3, valid_debug3 = get_datasets(config['dataset']['llava'], config, image_processor, tokenizer)\n",
     "\n",
-    "num_samples_to_train, num_samples_to_valid = 8000, 3000\n",
+    "concat_train_dataset = ConcatDataset([train_dataset1, train_dataset2])\n",
+    "concat_valid_dataset = ConcatDataset([valid_dataset1, valid_dataset2])\n",
+    "\n",
+    "num_samples_to_train, num_samples_to_valid = int(len(concat_train_dataset)*0.1), int(len(concat_valid_dataset)*0.1)\n",
+    "\n",
     "subset_of_train_dataset3 = train_dataset3.shuffle(seed=42).select(range(num_samples_to_train))\n",
     "subset_of_valid_dataset3 = valid_dataset3.shuffle(seed=42).select(range(num_samples_to_valid))\n",
     "\n",
-    "final_train_dataset = ConcatDataset([train_dataset1, train_dataset2, subset_of_train_dataset3])\n",
-    "final_valid_dataset = ConcatDataset([valid_dataset1, valid_dataset2, subset_of_valid_dataset3])\n",
+    "final_train_dataset = ConcatDataset([concat_train_dataset, subset_of_train_dataset3])\n",
+    "final_valid_dataset = ConcatDataset([concat_valid_dataset, subset_of_valid_dataset3])\n",
     "\n",
     "print(f\"Train Dataset length: {len(final_train_dataset)}, Valid Dataset length: {len(final_valid_dataset)}\")"
    ]
