add script file

--- a/notebooks/train-script-cococaption.ipynb
+++ b/notebooks/train-script-cococaption.ipynb
@@ -194,9 +194,9 @@
     "    num_samples_to_train = int(len(concat_train_dataset) * 0.1)\n",
     "    num_samples_to_valid = int(len(concat_valid_dataset) * 0.1)\n",
     "\n",
-    "    subset_of_train_dataset3 = train_dataset3.shuffle(seed=42).select(range(num_samples_to_train))\n",
-    "    subset_of_valid_dataset3 = valid_dataset3.shuffle(seed=42).select(range(num_samples_to_valid))\n",
-    "\n",
+    "    subset_of_train_dataset3 = Subset(train_dataset3, indices=range(num_samples_to_train))\n",
+    "    subset_of_valid_dataset3 = Subset(valid_dataset3, indices=range(num_samples_to_valid))\n",
+    "    \n",
     "    final_train_dataset = ConcatDataset([concat_train_dataset, subset_of_train_dataset3])\n",
     "    final_valid_dataset = ConcatDataset([concat_valid_dataset, subset_of_valid_dataset3])\n",
     "    \n",
